# Prismer

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  README.de.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: agent_template.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docker/: .dockerignore  Dockerfile.openclaw  LICENSE  README.md  VERSIONS.md  compatibility.json  docker-compose.dev.yml  docker-compose.lite.yml  docker-compose.openclaw.yml  docker-entrypoint-openclaw.sh  docker-entrypoint-prismer.sh  docker-entrypoint.sh  mock-im-server.ts  test-openclaw.sh  versions-manifest.json
docker/base/: Dockerfile  Dockerfile.lite  output-sync.py  requirements-core.txt  requirements-jupyter.txt  requirements-ml.txt  version.sh
docker/config/: openclaw.json
docs/: CONTRIB.md  RUNBOOK.md  architecture.md  components.md  plugin-development.md  roadmap.md
sdk/: .gitignore  README.md
sdk/python/: README.md  pyproject.toml
sdk/python/prismer/: __init__.py  cli.py  client.py  realtime.py  types.py
sdk/python/tests/: test_integration.py
skills/: Agent.md
web/: .PLAN.md  .dockerignore  .env.docker.example  .gitignore  .prettierignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-entrypoint-web.sh  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
(+557 files in other folders)
